# hypershell

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  Apptainer  Dockerfile  Makefile.am  Makefile.in  README.rst  configure  configure.ac  main.c  main.cpp  pyproject.toml
.agents/: settings.json
.agents/factory/: ears.md  getting-started.html  harness-log.md  invariants.md  methodology.md  portability.md  review-rubric.md
.agents/factory/templates/: GOAL.md  META.md  PLAN.md  REVIEW.md  TECH.md
.agents/skills/hs-build/: SKILL.md
.agents/skills/hs-feature/: SKILL.md
.agents/skills/hs-harness/: SKILL.md
.agents/skills/hs-plan/: SKILL.md
.agents/skills/hs-publish/: SKILL.md
.agents/skills/hs-release/: SKILL.md
.agents/skills/hs-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: docker.yml  publish.yml  tests.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
docs/: alternatives.rst  conf.py  config.rst  getting_started.rst  index.rst  install.rst  logging.rst  manual.rst  roadmap.rst  security.rst
docs/_include/: client_help.rst  client_usage.rst  cluster_desc.rst  cluster_help.rst  cluster_usage.rst  config_desc.rst  config_help.rst  config_param_ref.rst  config_pythonpath.rst  config_task_env.rst  config_task_env_alt.rst  config_usage.rst  database.rst  initdb_desc.rst  initdb_help.rst  initdb_usage.rst  license.rst  security_alt.rst  server_help.rst  server_usage.rst  signals.rst  submit_desc.rst  submit_help.rst  submit_usage.rst  task_groups_alt.rst  task_info_help.rst  task_info_usage.rst  task_run_desc.rst  task_run_help.rst  task_run_usage.rst  task_search_desc.rst  task_search_help.rst  task_search_usage.rst  task_update_desc.rst  task_update_help.rst  task_update_usage.rst  task_wait_usage.rst  templates.rst  templates_alt.rst  tls_cli_options.rst
docs/api/: client.rst  cluster.rst  data.rst  index.rst  server.rst  submit.rst
docs/blog/: 20230329_2_2_0_release.rst  20230413_2_3_0_release.rst  20230602_2_4_0_release.rst  20240518_2_5_0_release.rst  20241231_2_6_1_release.rst  20250215_2_6_5_release.rst  20250405_2_6_6_release.rst  20250504_2_7_0_release.rst  20251101_2_8_0_release.rst  20260705_2_8_0_release.rst  index.rst
docs/cli/: index.rst  task_info.rst  task_run.rst  task_search.rst  task_submit.rst  task_update.rst  task_wait.rst
hysh/impl/: basic_error.c  basic_error.h
hysh/interface/: callback.h  data_buffer.h  error.h  file_stream.h  http.h  http_adapter.h  list.h  list_builder.h  object.h  serializable.h  service.h  stream.h  stream_cache.h  stream_filter.h  stream_handler.h  stream_multiplex.h  stream_pipeline.h  stream_variants.h  streamable.h  string.h  table.h  traceback.h
hysh/wrapper/: DataBuffer.hpp  Error.hpp  Object.hpp
man/man1/: hs.1  hyper-shell.1
share/bash_completion.d/: hs
share/man/man1/: hs.1  hsx.1  hyper-shell.1
share/zsh/site-functions/: _hs
spec/cli-cluster-restart-repeat-update/: GOAL.md  PLAN.md  REVIEW.md  TECH.md
spec/cli-cluster-restart-repeat-update/research/: 00-digest.md  01-identity-fingerprint.md  02-source-schema.md  03-scale-indexing.md  04-submit-flow.md  05-cli-gate-matrix.md  06-docs-completions-tests.md  07-uuidv7-source-ids.md  08-presentation-source-display.md  09-pruning-adversarial-check.md
spec/deflake-group-retry-test/: GOAL.md  META.md  PLAN.md  REVIEW.md  TECH.md
spec/deflake-group-retry-test/research/: 00-digest.md  01-output-path.md  02-test-harness.md  03-design-intent-history.md
spec/harness-refinements/: META.md
spec/logging-file-slot-reclaim/: GOAL.md  PLAN.md  REVIEW.md  TECH.md
spec/logging-file-slot-reclaim/research/: 00-digest.md  01-fs-lock-semantics.md  02-code-trace-signatures.md  03-fix-surface-and-tests.md  04-evidence-forensics.md  05-process-model-audit.md  06-liveness-design.md  07-reap-and-tension.md  08-scope-invariants.md  09-revised-design.md  10-stress-liveness.md  11-stress-reap.md
spec/task-slot/: GOAL.md  META.md  PLAN.md  REVIEW.md  TECH.md
src/completions/: hypershell.sh
src/hypershell/: __init__.py  client.py  config.py  server.py  submit.py  task.py
src/hypershell/cluster/: __init__.py  local.py  remote.py  ssh.py
src/hypershell/core/: __init__.py  config.py  exceptions.py  fsm.py  heartbeat.py  logging.py  platform.py  pretty_print.py  queue.py  remote.py  resource.py  signal.py  sys.py  tag.py  template.py  thread.py  tls.py  types.py  uuid.py
src/hypershell/data/: __init__.py  core.py  model.py
tests/: __init__.py  conftest.py  test_autoscale.py  test_cancel.py  test_client.py  test_cluster.py  test_factory_fsm.py  test_groups.py  test_initdb.py  test_list.py  test_logging.py  test_main.py  test_meta_status.py  test_queue_tls.py  test_restart.py  test_server.py  test_signal.py  test_source.py  test_submit.py  test_submit_json.py  test_template.py  test_update.py
tests/test_data/: __init__.py  test_core.py  test_model.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py
tests/unit/test_database/: test_core.py
