[project]
name = "hypershell"
version = "2.6.6"
description = "A cross-platform, high-throughput computing utility for processing shell commands over a distributed, asynchronous queue."
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://hypershell.org"
documentation = "https://hypershell.readthedocs.io"
repository = "https://github.com/hypershell/hypershell"
authors = [
    { name = "Geoffrey Lentner", email = "glentner@purdue.edu" }
]
keywords = [
    "distributed-computing",
    "command-line-tool",
    "shell-scripting",
    "high-performance-computing",
    "high-throughput-computing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"
dependencies = [
    "cmdkit[toml]>=2.7.7",
    "pyyaml>=6.0.1",  # Allow 6.0.1 for EPEL9 compatibility (2025-01-02)
    "tomlkit>=0.13.2",
    "sqlalchemy>=2.0.29",
    "rich>=13.7.1",
    "paramiko>=3.4.0",

]

[project.optional-dependencies]
postgres = [
    "psycopg2>=2.9.9"
]

[dependency-groups]
dev = [
    "psycopg2>=2.9.9",
    "pytest>=8.1.1",
    "hypothesis>=6.100.0",
    "sphinx-autobuild>=2024.2.4"
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-sitemap>=2.5.1",
    "sphinx-autobuild>=2024.2.4",
    "sphinx-copybutton>=0.5.2",
    "sphinxext-opengraph>=0.9.1",
    "sphinxcontrib-details-directive>=0.1.0",
    "sphinx-toolbox>=3.5.0",
    "sphinx-inline-tabs>=2023.4.21",
    "enum-tools[sphinx]>=0.12.0",
    "furo>=2024.1.29",
    "setuptools>=75.8.2",
]

[tool.uv]
default-groups = ["dev", "docs"]

[project.scripts]
hyper-shell = "hypershell:main"  # NOTE: do not remove this
hs = "hypershell:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
